src/rfx/tests/command_line/preprocessor_defines.rfx
// :RUN_RFXC -P %STD_OUTPUT% -D TEST -D FOO=BAR %INPUT% --Rl

#ifdef TEST
int foo() { return 0; }
#else
BadThing thatWontCompile;
#endif

#if FOO!=BAR
AnotherError onThisLine;
#else
int bar() { return foo(); }
#endif